getMyPost with query page,per_page,sort_by
